# simple-rtsp

./: CMakeLists.txt
cdk/Debug/: cdk.lib
include/rtsp-client/: rtsp-client.h
include/rtsp-common/: hevc.h  nalu.h  rtp.h  rtsp-common.h  sdp.h
include/rtsp-server/: rtsp-server.h
src/rtsp-client/: main.c  rtsp-client.c
src/rtsp-common/: hevc.c  rtp.c  rtsp-common.c  sdp.c
src/rtsp-server/: main.c  rtsp-server.c
